welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:5: error: not found: value Croisement
	if ((Croisement()) && x<3) {droite()}
             ^Poucet:6: error: not found: value Croisement
	if ((Croisement()) && x>2) {gauche()}
             ^