welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var x=0
do{ 
	for (i<-1 to 5) {avance()}
	if (estSurBiscuit()) {x=x+1}
	if ((Croisement()) && x<3) {droite()}
	if ((Croisement()) && x>2) {gauche()}
} while (!sortieTrouvee())

